# pong

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.json
pong/: __init__.py  assets.py  ball.py  colors.py  config.json  const.py  core.py  credits.txt  main_loop.py  menu.py  player.py  sound.py
pong/scenes/: base.py  scene_manager.py
pong/scenes/game/: pause_menu.py  pong.py
pong/scenes/main_menu/: __init__.py  credits.py  keys.py  main_menu.py  options.py
pong/scenes/pause_menu/: __init__.py  pause_menu.py
pong/sprites/: __init__.py  ball.py  exceptions.py  menu.py  racket.py
