[tool.poetry]
name = "pong"
version = "0.0.1"
description = "test of pygame lib"
authors = ["Onirei <occult.remi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
